2006-12-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailMainFrame.m ([UIxMailMainFrame
	-composeAction]): method imported from removed container modules.
	([UIxMailMainFrame -mailFolderName]): method imported from removed
	container modules.

	* UI/MailerUI/UIxMailPopupView.m: a new special popup component
	for wrapping UIxMailView with the "popupview" action.

	* UI/MailerUI/UIxMailAccountView.m: renamed to UIxMailSplashView,
	since its the component that displays the same splash screen than
	the one in Thunderbird/Icedove.

	* UI/MailerUI/UIxMailAccountViewContainer.[hm],
	UI/MailerUI/UI/MailerUI/UIxMailAccountsView.m,
	UI/MailerUI/UIxMailListViewContainer.[hm],
	UI/MailerUI/UIxMailViewContainer.[hm]: removed

2006-12-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/HTMLElement.js: replaced the functional
	selectNode() and deselectNode() functions with select() and
	deselect() methods of HTMLElement.

	* UI/WebServerResources/ContactsUI.js: cleanup, most of the
	events are initialized from here now instead of in the HTML code.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-checkRightsAction]): new method similar to the one with the same
	name in UIxCalMainView.m.

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -saveAclsAction]): added
	code to handle the publishing of freebusy information.

2006-12-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
	-checkRightsAction]): new action method that returns a
	comma-separated list of boolean values matching the right of the
	current user to "view" (as a permission) each foreign calendar
	stored in his preferences.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -setOwner:newOwner]):
	new method that sets a customOwner, which can be returned with
	ownerInContext it set.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder